	 . do not assume English locale when using date (Closes: #465837)
	 . add 'when = manual' option, that can be used in the global config
	   file or in a given backup action file. Thanks Tuomas Jormola for the
	   preliminary patch (Closes: #511299)
    handler changes
	maildir:
	 . fix location of deleted_on file
	 . add missing destid_file options to ssh connections
	mysql:
	 . Options passed to mysqldump are now customizable with the new
	   sqldumpoptions configuration variable. Thanks to Chris Lamb for his
	   preliminary patch (Closes: #502966)
	 . Hide 'mysqladmin ping' output, to prevent confusing the user in
	   case mysqld is running but the authentication fails, which apparently
	   does not prevent mysqldump to work.
	 . Fix the error message displayed when mysqld is not running:
	   mysqladmin ping indeed returns 0 when authentication fails.
	sys:
	 . New luksheaders option (default=disabled) to backup the Luks header
	   of every Luks device.
	 . New lvm option (default=disabled) to backup LVM metadata for every
	   detected volume group.
	 . Backup dmsetup info as well, for easier restoring of Luks headers.

version 0.9.6 -- July 21, 2008
    backupninja changes
	 . fix bug in cstream definition, thanks Jamie McClelland
	 . Allow the entire backup run to be halted by an action, thanks to
	   Matthew Palmer (Closes: #455836)
	 . Fixed tr construct reporting a warning (Closes: #452669)
    lib changes
	vserver:
	 . added vservers_running function
	tools
	 . mktemp is now required to run backupninja, removed less secure
	   fall-back if mktemp did not exist on the system
    handler changes
	dup:
	 . General cleanup
	 . Better support for new duplicity (>= 0.4.4) command line syntax:
	   run remove-older-than when $keep is not set to yes (Closes: #458816),
	   and run "duplicity cleanup" before any other duplicity command; both
	   only trigger a warning on failure, since they should not stop backups